Fix gallery collapse

--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -59,7 +59,7 @@ h1.gallery-title{
   }
 
   &:after {
-    // content: '';
+    content: '';
     display: block;
     clear: both;
   }
